<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/city4"
    tools:context=".Tips">


    <TextView
        android:id="@+id/text_view"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="30dp"
        android:textStyle="bold"
        android:text="@string/visacard"
        />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/visa"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#989696"
        app:layout_constraintBottom_toBottomOf="@+id/image_view"/>

    <TextView
        android:id="@+id/text_view2"
        android:layout_marginTop="170dp"
        android:layout_marginStart="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="30dp"
        android:text="@string/Vietnamese"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/image_view2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="131dp"
        android:src="@drawable/vietnamese4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#989696"
        app:layout_constraintBottom_toBottomOf="@+id/image_view2"/>

    <TextView
        android:id="@+id/text_view3"
        android:layout_marginTop="288dp"
        android:layout_marginStart="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="30dp"
        android:text="@string/street"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/image_view3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="246dp"
        android:src="@drawable/street2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#989696"
        app:layout_constraintBottom_toBottomOf="@+id/image_view3"/>

    <TextView
        android:id="@+id/text_view4"
        android:layout_marginTop="400dp"
        android:layout_marginStart="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="30dp"
        android:text="@string/helmet"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/image_view4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="360dp"
        android:src="@drawable/helmet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#989696"
        app:layout_constraintBottom_toBottomOf="@+id/image_view4"/>

    <TextView
        android:id="@+id/text_view5"
        android:layout_marginTop="520dp"
        android:layout_marginStart="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="30dp"
        android:text="@string/sidewalk"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/image_view5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="480dp"
        android:src="@drawable/sidewalk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#989696"
        app:layout_constraintBottom_toBottomOf="@+id/image_view5"/>





</androidx.constraintlayout.widget.ConstraintLayout>





